docs: Update helm charts note with date (#20781)

--- a/docs/sources/release-notes/v3-6.md
+++ b/docs/sources/release-notes/v3-6.md
@@ -165,7 +165,7 @@ Other improvements include the following:
   - [loki-simple-scalable](https://github.com/grafana/helm-charts/tree/main/charts/loki-simple-scalable)
 
    {{< admonition type="note" >}}
-   In June 2025, Grafana recruited three [Grafana Champions](https://grafana.com/community/champions/) and launched a three month pilot program to maintain the Loki Helm chart. The pilot proved successful, attracting more Grafana champions, and led to the Champions asking to take over maintenance of the chart entirely. The [grafana-community/helm-charts](https://github.com/grafana-community/helm-charts) repository launched on January 30, 2026. The [Loki Helm chart](https://github.com/grafana/loki/tree/main/production/helm/loki) will be migrating from the Loki repository to the new [grafana-community/helm-charts](https://github.com/grafana-community/helm-charts) repository in the near future. The Champions will attempt to make this transition as seamless as possible.
+   In June 2025, Grafana recruited three [Grafana Champions](https://grafana.com/community/champions/) and launched a three month pilot program to maintain the Loki Helm chart. The pilot proved successful, attracting more Grafana champions, and led to the Champions asking to take over maintenance of the chart entirely. The [grafana-community/helm-charts](https://github.com/grafana-community/helm-charts) repository launched on January 30, 2026. Effective [March 16, 2026](https://github.com/grafana/loki/issues/20705), the Grafana Loki Helm chart will be forked to the new repository grafana-community/helm-charts. The motivation behind this change is to accelerate development and enable direct community maintenance, as outlined in [grafana/helm-charts#3955](https://github.com/grafana/helm-charts/issues/3955). The Champions will attempt to make this transition as seamless as possible.
    {{< /admonition >}}
 
 ### 3.6.0 (2025-11-17)
