docs: fix link typo in 3.6 release (#20862)
Signed-off-by: Eric Huang <chenyihuang001@gmail.com>
Co-authored-by: J Stickler <julie.stickler@grafana.com>

--- a/docs/sources/release-notes/v3-6.md
+++ b/docs/sources/release-notes/v3-6.md
@@ -18,7 +18,7 @@ See the [deprecations](https://grafana.com/docs/loki/latest/release-notes/v3-6/#
 
 Key features in Loki 3.6.0 include the following:
 
-* **Horizontally scalable compactor:** The Compactor in Loki is a singleton service that compacts the index and applies retention, including processing delete requests. Because it can only be scaled vertically, it limits how many resources you can add to speed things up when the workload increases in bigger cells. This release adds a horizontally scalable compactor, to speed up processing large delete requests or catching up if there has been a lag in processing for some reason. Note that the horizontally scalable compactor delegates deletion work to the workers. Loki continues to perform compaction and apply retention in the main Compactor. For more information, refer to the [documentation](https://grafana.com/docs/loki/<LOKI_VERSION>>/operations/storage/compactor-horizontal-scaling/).
+* **Horizontally scalable compactor:** The Compactor in Loki is a singleton service that compacts the index and applies retention, including processing delete requests. Because it can only be scaled vertically, it limits how many resources you can add to speed things up when the workload increases in bigger cells. This release adds a horizontally scalable compactor, to speed up processing large delete requests or catching up if there has been a lag in processing for some reason. Note that the horizontally scalable compactor delegates deletion work to the workers. Loki continues to perform compaction and apply retention in the main Compactor. For more information, refer to the [documentation](https://grafana.com/docs/loki/<LOKI_VERSION>/operations/storage/compactor-horizontal-scaling/).
 
 * **OTel:** Loki has been refactored to use the OpenTelemetry tracing library instead of the OpenTracing library. ([#17859](https://github.com/grafana/loki/pull/17859 )). Note that Loki can still be configured using `JAEGER_ env` vars and still exports traces in `JAEGER_` format.
 
