docs: Update name to learning path (#20867)

--- a/docs/sources/release-notes/v3-6.md
+++ b/docs/sources/release-notes/v3-6.md
@@ -28,7 +28,7 @@ Key features in Loki 3.6.0 include the following:
 
 * **UI:** We have moved the Loki UI to a Grafana Plugin. The static Operational UI is not going away, and all the APIs that serve it will remain in Loki. The Javascript that serves the UI, however, has been moved to the [Loki Operational UI](https://github.com/grafana/loki-operational-ui) Grafana plugin ([#19390](https://github.com/grafana/loki/issues/19390)).
 
-* **Docs:** Published a third Cloud Deployment Guide, this one for [Google Cloud Platform](https://grafana.com/docs/loki/latest/setup/install/helm/deployment-guides/gcp/) ([#17503](https://github.com/grafana/loki/pull/17503)). Added links to three log related [Learning journeys](https://grafana.com/docs/learning-journeys/) to the Loki docs ([#17956](https://github.com/grafana/loki/pull/17956)). Revised the LogQL query page ([#16286](https://github.com/grafana/loki/pull/16286)) and added a LogQL video ([#18111](https://github.com/grafana/loki/pull/18111)). Added a caution to the Labels topic and added a [new topic](https://grafana.com/docs/loki/<LOKI_VERSION>/get-started/labels/remove-default-labels/) with instructions how to modify the default OpenTelemetry resource attributes that Loki converts to labels ([#17958](https://github.com/grafana/loki/pull/17958)). Updated the [caching topic](https://grafana.com/docs/loki/latest/operations/caching/) ([#17420](https://github.com/grafana/loki/pull/17420)).
+* **Docs:** Published a third Cloud Deployment Guide, this one for [Google Cloud Platform](https://grafana.com/docs/loki/latest/setup/install/helm/deployment-guides/gcp/) ([#17503](https://github.com/grafana/loki/pull/17503)). Added links to three log related [Learning paths](https://grafana.com/docs/learning-paths/) to the Loki docs ([#17956](https://github.com/grafana/loki/pull/17956)). Revised the LogQL query page ([#16286](https://github.com/grafana/loki/pull/16286)) and added a LogQL video ([#18111](https://github.com/grafana/loki/pull/18111)). Added a caution to the Labels topic and added a [new topic](https://grafana.com/docs/loki/<LOKI_VERSION>/get-started/labels/remove-default-labels/) with instructions how to modify the default OpenTelemetry resource attributes that Loki converts to labels ([#17958](https://github.com/grafana/loki/pull/17958)). Updated the [caching topic](https://grafana.com/docs/loki/latest/operations/caching/) ([#17420](https://github.com/grafana/loki/pull/17420)).
 
 {{< admonition type="note" >}}
 Note that when appropriate, documentation updates have been backported to previous releases.
